--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 Chokkan
+ChokkanPred
 Fukunagashi
+FukunagashiPred
 Kengai
+KengaiPred
 Literatti
+LiterattiPred
 Moyogi
+MoyogiPred
 Sekijoju
+SekijojuPred
 Shakan
+ShakanPred
 Renet20Epochs.tf
