--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
 Chokkan
-ChokkanPred
 Fukunagashi
-FukunagashiPred
 Kengai
-KengaiPred
 Literatti
-LiterattiPred
 Moyogi
-MoyogiPred
-Sekijoju
-SekijojuPred
 Shakan
-ShakanPred
 trainHistory
+googlenet10epochs.tf
+googlenet50Epochs.tf
+googlenet100Epochs.tf
+.idea
+CNN-TransferLearning.iml
