--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,15 @@ Kengai
 Literatti
 Moyogi
 Shakan
-trainHistory
 .idea
-CNN-TransferLearning.iml
 exampleImg.jpg
-VGG16.tf
-model.png
+GoogleNet10EpochsK-Folds1.tf
+GoogleNet10EpochsK-Folds2.tf
+GoogleNet10EpochsK-Folds3.tf
+GoogleNet10EpochsK-Folds4.tf
+GoogleNet10EpochsK-Folds5.tf
+trainHistory1
+trainHistory2
+trainHistory3
+trainHistory4
+trainHistory5
