[25-07-2020] Implementa a continuação do googlenet e o plot de todos os k-folds.

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,18 @@ GoogleNet10EpochsK-Folds2.tf
 GoogleNet10EpochsK-Folds3.tf
 GoogleNet10EpochsK-Folds4.tf
 GoogleNet10EpochsK-Folds5.tf
+GoogleNet10EpochsK-Folds6.tf
+GoogleNet10EpochsK-Folds7.tf
+GoogleNet10EpochsK-Folds8.tf
+GoogleNet10EpochsK-Folds9.tf
+GoogleNet10EpochsK-Folds10.tf
 trainHistory1
 trainHistory2
 trainHistory3
 trainHistory4
 trainHistory5
+trainHistory6
+trainHistory7
+trainHistory8
+trainHistory9
+trainHistory10
