[30-07-2020] Implementa call-back.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ trainHistory7
 trainHistory8
 trainHistory9
 trainHistory10
+best_model1.hdf5
+best_model2.hdf5
+best_model3.hdf5
+best_model4.hdf5
+best_model5.hdf5
+best_model6.hdf5
+best_model7.hdf5
+best_model8.hdf5
+best_model9.hdf5
+best_model10.hdf5
